--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ amethyst = "0.15.0"
 log = { version = "0.4.8", features = ["serde"] }
 
 [features]
-#default = ["vulkan"]
+default = ["vulkan"]
 #empty = ["amethyst/empty"]
 #metal = ["amethyst/metal"]
 vulkan = ["amethyst/vulkan"]
